--- a/file_management/env.example
+++ b/file_management/env.example
@@ -9,7 +9,7 @@ BACKUP_DESTINATION="~/Backups/HostA"
 
 # Optional: path to a notifier binary if you want desktop notifications
 # macOS example (if installed via Homebrew):
-# BACKUP_NOTIFIER="/opt/homebrew/bin/terminal-notifier"
+BACKUP_NOTIFIER="/opt/homebrew/bin/terminal-notifier"
 
 # Optional: override log location (defaults to ./backup.log)
-# BACKUP_LOGFILE="~/backup/backup.log"
+BACKUP_LOGFILE="~/backup/backup.log"
